@@ -1,11 +1,3 @@
-[submodule "site-lisp/use-package"]
-	path = site-lisp/use-package
-	url = https://github.com/jwiegley/use-package.git
-        ignore = dirty
-[submodule "site-lisp/ox-twbs"]
-	path = site-lisp/ox-twbs
-	url = https://github.com/marsmining/ox-twbs.git
-        ignore = dirty
 [submodule "site-lisp/emacs-ipython-notebook"]
 	path = site-lisp/emacs-ipython-notebook
 	url = https://github.com/millejoh/emacs-ipython-notebook.git
@@ -18,14 +10,6 @@
 	path = site-lisp/outline-magic
 	url = https://github.com/tj64/outline-magic.git
         ignore = dirty
-[submodule "site-lisp/command-log-mode"]
-	path = site-lisp/command-log-mode
-	url = https://github.com/lewang/command-log-mode.git
-        ignore = dirty
-[submodule "site-lisp/emacs-wgrep"]
-	path = site-lisp/emacs-wgrep
-	url = https://github.com/mhayashi1120/Emacs-wgrep.git
-        ignore = dirty
 [submodule "site-lisp/dired-details"]
 	path = site-lisp/dired-details
 	url = https://github.com/emacsmirror/dired-details.git
@@ -37,9 +21,12 @@
 [submodule "site-lisp/yasnippet-snippets"]
 	path = site-lisp/yasnippet-snippets
 	url = https://github.com/AndreaCrotti/yasnippet-snippets.git
+        ignore = dirty
 [submodule "python/jedi"]
 	path = python/jedi
 	url = https://github.com/davidhalter/jedi.git
+        ignore = dirty
 [submodule "python/parso"]
 	path = python/parso
 	url = https://github.com/davidhalter/parso.git
+        ignore = dirty
