@@ -1,33 +1,33 @@
 ;;; `setup-spell-check.el' --- Setup spell checker packages. -*- lexical-binding: t -*-
-
+;;
 ;; Author: Jonas Avrin
 ;; Maintainer: Jonas Avrin
 ;; Version: 0.0.1
 ;; Package-Requires: (`auto-complete')
 ;; Homepage:
 ;; Keywords:
-
-
+;;
+;;
 ;; This file is not part of GNU Emacs
-
+;;
 ;; This file is free software; you can redistribute it and/or modify
 ;; it under the terms of the GNU General Public License as published by
 ;; the Free Software Foundation; either version 3, or (at your option)
 ;; any later version.
-
+;;
 ;; This program is distributed in the hope that it will be useful,
 ;; but WITHOUT ANY WARRANTY; without even the implied warranty of
 ;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ;; GNU General Public License for more details.
-
+;;
 ;; For a full copy of the GNU General Public License
 ;; see <http://www.gnu.org/licenses/>.
-
-
-;;; Commentary:
-
 ;;
-
+;;
+;;; Commentary:
+;;
+;;
+;;
 ;;; Code:
 (use-package flyspell
   :when (executable-find "hunspell")
