@@ -1,3 +1,35 @@
+;;; `setup-yasnippet.el' --- Setup snippet packages -*- lexical-binding: t -*-
+;;
+;; Author: Jonas Avrin
+;; Maintainer: Jonas Avrin
+;; Version: 0.0.1
+;; Package-Requires: (`')
+;; Homepage:
+;; Keywords:
+;;
+;;
+;; This file is not part of GNU Emacs
+;;
+;; This file is free software; you can redistribute it and/or modify
+;; it under the terms of the GNU General Public License as published by
+;; the Free Software Foundation; either version 3, or (at your option)
+;; any later version.
+;;
+;; This program is distributed in the hope that it will be useful,
+;; but WITHOUT ANY WARRANTY; without even the implied warranty of
+;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+;; GNU General Public License for more details.
+;;
+;; For a full copy of the GNU General Public License
+;; see <http://www.gnu.org/licenses/>.
+;;
+;;
+;;; Commentary:
+;;
+;;
+;;
+;;; Code:
+
 (use-package yasnippet
   ;; :diminish 'yas-minor-mode
   ;; :bind (("<tab>" . nil) ;; Unbind Tab completion
@@ -11,8 +43,8 @@
   (defun jawa/visit-yas-snippet-dir ()
     (interactive)
     (find-file (car yas-snippet-dirs)))
-  :hook (emacs-lisp-mode-hook org-mode-hook python-mode-hook)
   ;; (yas-global-mode 1)
+  :hook (emacs-lisp-mode-hook org-mode-hook python-mode-hook)
 )
 
 (use-package yasnippet-snippets
@@ -51,8 +83,8 @@
   ;; When you use the :commands keyword, it creates autoloads for
   ;; those commands and defers loading of the module until they are used
   :commands (ivy-yasnippet)
-  :config
-  (jawa/bind-user "y" 'ivy-yasnippet)
-  (jawa/bind-register "n" 'yas-new-snippet))
+  :bind (("C-c y" . ivy-yasnippet)
+         ("C-c n" . yas-new-snippet)))
 
 (provide 'setup-yasnippet)
+;;; setup-yasnippet.el ends here
